--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "nodemon dist/server.js",
     "dev": "nodemon src/server.ts",
     "test": "jest",
-    "test:watch": "jest --watchAll"
+    "test:watch": "jest --watchAll",
+    "test:coverage": "jest --collectCoverage"
   },
   "author": "",
   "license": "ISC",
