--- a/package.json
+++ b/package.json
@@ -14,19 +14,24 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "errorhandler": "^1.5.1",
     "express": "^4.18.2",
+    "express-validator": "^7.0.1",
     "helmet": "^7.0.0",
+    "http-status-codes": "^2.3.0",
     "knex": "^2.5.1",
     "morgan": "^1.10.0",
     "pg": "^8.11.3",
     "swagger-jsdoc": "^6.2.8",
-    "swagger-ui-express": "^5.0.0"
+    "swagger-ui-express": "^5.0.0",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.4",
     "@types/compression": "^1.7.3",
     "@types/cors": "^2.8.14",
     "@types/errorhandler": "^1.5.1",
@@ -37,6 +42,7 @@
     "@types/supertest": "^2.0.13",
     "@types/swagger-jsdoc": "^6.0.1",
     "@types/swagger-ui-express": "^4.1.3",
+    "@types/uuid": "^9.0.4",
     "eslint-plugin-prettier": "^5.0.0",
     "jest": "^29.7.0",
     "nodemon": "^3.0.1",
