--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "server.js",
   "scripts": {
     "build": "tsc",
-    "start": "nodemon dist/server.js",
-    "dev": "nodemon src/server.ts",
+    "start": "cross-env NODE_ENV=production nodemon dist/server.js",
+    "dev": "cross-env NODE_ENV=development nodemon src/server.ts",
     "test": "jest",
     "test:watch": "jest --watchAll",
     "test:coverage": "jest --collectCoverage"
@@ -43,6 +43,7 @@
     "@types/swagger-jsdoc": "^6.0.1",
     "@types/swagger-ui-express": "^4.1.3",
     "@types/uuid": "^9.0.4",
+    "cross-env": "^7.0.3",
     "eslint-plugin-prettier": "^5.0.0",
     "jest": "^29.7.0",
     "nodemon": "^3.0.1",
