--- a/.github/workflows/development.yml
+++ b/.github/workflows/development.yml
@@ -10,10 +10,12 @@ jobs:
   test:
     runs-on: ubuntu-latest
     steps:
-      - name: Testing
-      - uses: actions/checkout@v4
-        with:
-          node-version: '18.xx'
-      - run: npm ci
-      - run: npm run build --if-present
-      - run: npm test
+    - uses: actions/checkout@v4
+    - name: Use Node.js
+      uses: actions/setup-node@v3
+      with:
+        node-version: '18.x'
+    - name: Install dependencies
+      run: npm install
+    - name: Run test
+      run: npm run test
