Fix npm not found

--- a/.github/workflows/development.yml
+++ b/.github/workflows/development.yml
@@ -31,6 +31,8 @@ jobs:
         key: ${{ secrets.SSH_PRIVATE_KEY }}
         port: ${{ secrets.VM_PORT }}
         script: |
+          export NVM_DIR=~/.nvm
+          source ~/.nvm/nvm.sh
           cd ~/apps/project-z-be
           git pull
           npm run build
