--- a/.github/workflows/development.yml
+++ b/.github/workflows/development.yml
@@ -35,6 +35,6 @@ jobs:
           source ~/.nvm/nvm.sh
           cd ~/apps/project-z-be
           git pull
-          nom install
+          npm install
           npm run build
           pm2 restart
