--- a/.github/workflows/development.yml
+++ b/.github/workflows/development.yml
@@ -34,7 +34,8 @@ jobs:
           export NVM_DIR=~/.nvm
           source ~/.nvm/nvm.sh
           cd ~/apps/project-z-be
+          sudo rm -rf ./node-modules
           git pull
-          npm install
+          npm ci
           npm run build
           pm2 restart
