--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@types/express": "^4.17.18",
     "@types/jest": "^29.5.5",
     "@types/morgan": "^1.9.5",
+    "@types/node": "^20.8.2",
     "@types/pg": "^8.10.3",
     "@types/supertest": "^2.0.13",
     "@types/swagger-jsdoc": "^6.0.1",
