--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express-validator": "^7.0.1",
     "helmet": "^7.0.0",
     "http-status-codes": "^2.3.0",
+    "jsonwebtoken": "^9.0.2",
     "knex": "^2.5.1",
     "morgan": "^1.10.0",
     "pg": "^8.11.3",
@@ -37,6 +38,7 @@
     "@types/errorhandler": "^1.5.1",
     "@types/express": "^4.17.18",
     "@types/jest": "^29.5.5",
+    "@types/jsonwebtoken": "^9.0.3",
     "@types/morgan": "^1.9.5",
     "@types/node": "^20.8.2",
     "@types/pg": "^8.10.3",
