--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,7 @@
 # Server Config
 PORT=8080
-JWT_SECRET=
+ACCESS_TOKEN_SECRET="refrest-token-secret"
+REFRESH_TOKEN_SECRET="refresh-token-secret"
 
 # DB Config
 DB_HOST=localhost
